--- a/gateways.yaml
+++ b/gateways.yaml
@@ -12,42 +12,7 @@ metadata:
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: Gateway
 metadata:
-  name: dev
-  namespace: gateway
-spec:
-  gatewayClassName: amazon-vpc-lattice
-  listeners:
-  - name: http
-    protocol: HTTP
-    port: 80
-  - name: https
-    protocol: HTTPS
-    port: 443
-  
----
-
-
-apiVersion: gateway.networking.k8s.io/v1beta1
-kind: Gateway
-metadata:
-  name: prod
-  namespace: gateway
-spec:
-  gatewayClassName: amazon-vpc-lattice
-  listeners:
-  - name: http
-    protocol: HTTP
-    port: 80
-  - name: https
-    protocol: HTTPS
-    port: 443
-
----
-
-apiVersion: gateway.networking.k8s.io/v1beta1
-kind: Gateway
-metadata:
-  name: staging
+  name: superappsvcnetwork
   namespace: gateway
 spec:
   gatewayClassName: amazon-vpc-lattice
